# splitrpc

./: LICENSE  README.md  REQUIREMENTS.md
conf_scripts/: add_neighbors.sh  app_config.sh  dev_config.rc  env_config.rc  grpc_install_script.sh  init_machine.sh
src/: eth_common.h  p2p_buf_pool.h  p2p_bufs.h  p2p_rpc.h  p2p_rpc_app_ctx.h  p2p_rpc_app_rr.h  p2p_rpc_app_rr_mem_pool.h  p2p_rpc_app_server.h  p2p_rpc_app_stub.h  p2p_rpc_async_app_server.h  p2p_rpc_conn_info.h  p2p_rpc_generic_server.h  p2p_rpc_rr.h  p2p_rpc_rr_ng.h  p2p_rpc_rr_pool.h  p2p_rpc_rr_pool_ng.h  p2p_rpc_sg_engine.h  p2p_rpc_tring.h  udp_rr.h
src/apps/: echo_rpc_bench.cc  lenet_rpc_bench.cc  lstm_rpc_bench.cc  mm.cu  mm.cuh  mm_rpc_bench.cc  ort_app.h  ort_defs.h  ort_rpc_bench.cc  vec_add_rpc_bench.cc
src/apps/lenet/: lenet_vanilla.cu  lenet_vanilla.cuh
src/apps/nnfusion_lstm/: CMakeLists.txt  lstm_bench.cc  nnfusion_rt.cu  nnfusion_rt.h
src/apps/vec_add/: vector_add.cu  vector_add.cuh
src/grpc_bench/: CMakeLists.txt  batched_grpc_handler.h  grpc_client.cc  grpc_common.h  grpc_handler.h  infer.pb.cc  infer.pb.h  lenet_rpc_bench.cc  lstm_rpc_bench.cc  mm_rpc_bench.cc  ort_rpc_bench.cc  run_server.sh  vec_add_rpc_bench.cc
src/lib_loadgen/: CMakeLists.txt  Makefile  app.h  base_client.h  base_udp_client.h  closed_large.sh  closed_small.sh  common_defs.h  dist_rpc_bench.cc  dist_udp_bench.cc  distribution.h  dpdk_zc_udp_client.h  echo_client.cc  grpc_client.h  infer.proto  load_generator.h  open_large.sh  ort_client.cc  p2p_rpc_app_client.h  run_closed_load_bench.sh  run_load_bench.sh  stats_factory.h  udp_app_client.h  vec_add_client.cc
src/local_bench/: CMakeLists.txt  async_gpu_worker.cc  async_gpu_worker_utils.cu  concurrentqueue.h  lenet_local_bench.cc  lstm_local_bench.cc  ort_local_bench.cc  ort_test.cc  p2p_rpc_local_bench.cc  ring_buf_test.cc  run_local_bench.sh  vec_add_bench.cc
src/splitrpc_rdma_transport/: CMakeLists.txt  gpu_dpdk_rdma_proxy_handler.cc  gpu_rdma_batched_server.cc  gpu_rdma_common.cc  gpu_rdma_common.h  gpu_rdma_proxy_handler.cc  gpu_rdma_server.cc  p2p_rpc_bf_rr_pool.h  run_proxy.sh  run_server.sh
src/splitrpc_server/: CMakeLists.txt  device_test.cu  p2p_rpc_dpdk_server.cc  profile_server.sh  run_server.sh
src/transport/: dpdk_init.cc  dpdk_init.h  dpdk_rx_tx.h  dpdk_transport.h  dpdk_transport_ng.h  dpdk_utils.h  g_copy.cu  g_copy.cuh  g_copy_ng.cu  g_copy_ng.cuh  g_udp_handler.cu  g_udp_handler.cuh  udp_rx_tx.h  udp_transport.h
src/utils/: CMakeLists.txt  config_utils.h  debug_utils.h  g_utils.cu  g_utils.cuh  gdr_mem_manager.cc  gdr_mem_manager.h  random_utils.h  stats_utils.h  time_utils.h
